# librensetsu

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
librensetsu/: __init__.py  const.py  datadownloader.py  download_unidic.py  downloader.py  formatter.py  grammar.py  graphql.py  humanclock.py  models.py  prettyprint.py  pydanticmodels.py  slugify.py  transliterate.py
